--- a/app/src/main/res/layout/add_activity.xml
+++ b/app/src/main/res/layout/add_activity.xml
@@ -9,6 +9,13 @@
         android:orientation="vertical"
         android:padding="15sp">
 
+        <TextView
+            android:id="@+id/error"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:visibility="gone" />
+
         <EditText
             android:id="@+id/matiere"
             android:layout_width="match_parent"
@@ -42,7 +49,7 @@
             android:inputType="textPersonName" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/buttonValidation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Valider" />
