--- a/app/src/main/res/layout/update_activity.xml
+++ b/app/src/main/res/layout/update_activity.xml
@@ -9,17 +9,17 @@
         android:orientation="vertical"
         android:padding="15sp">
 
-        <Spinner
-            android:id="@+id/matiere"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
         <TextView
             android:id="@+id/error"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView"
             android:visibility="gone" />
+
+        <Spinner
+            android:id="@+id/matiere"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <EditText
             android:id="@+id/note"
@@ -45,10 +45,25 @@
             android:hint="Coeff"
             android:inputType="number" />
 
-        <Button
-            android:id="@+id/buttonValidation"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Valider" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/buttonValidation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Modifier" />
+
+            <Button
+                android:id="@+id/buttonDelete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Supprimer" />
+        </LinearLayout>
+
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
