--- a/app/src/main/res/layout/spinner.xml
+++ b/app/src/main/res/layout/spinner.xml
@@ -11,8 +11,11 @@
         <TextView
             android:id="@+id/name_matiere"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40sp"
+            android:layout_marginBottom="5sp"
+            android:layout_marginTop="5sp"
             android:layout_weight="1"
+            android:gravity="center_vertical"
             android:text="TextView" />
     </LinearLayout>
 
