--- a/app/src/main/res/layout/connexion_activity.xml
+++ b/app/src/main/res/layout/connexion_activity.xml
@@ -5,9 +5,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="15sp">
+        android:padding="15sp"
+        android:visibility="gone">
 
         <EditText
             android:id="@+id/email"
@@ -31,12 +32,38 @@
             android:layout_height="wrap_content"
             android:text="Valider" />
 
-        <com.facebook.login.widget.LoginButton
-        android:id="@+id/login_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="30dp" />
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/login_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="30dp"
+            android:layout_marginTop="30dp" />
+
+        <TextView
+            android:id="@+id/co"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="Félicitation, vous êtes connecté !"
+            android:visibility="gone" />
+
+        <Button
+            android:id="@+id/buttondeco"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="30dp"
+            android:layout_marginTop="30dp"
+            android:text="Déconnexion" />
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
