--- a/app/src/main/res/layout/add_activity.xml
+++ b/app/src/main/res/layout/add_activity.xml
@@ -9,17 +9,18 @@
         android:orientation="vertical"
         android:padding="15sp">
 
-        <Spinner
-            android:id="@+id/matiere"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
         <TextView
             android:id="@+id/error"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView"
+            android:textColor="#FF0000"
             android:visibility="gone" />
+
+        <Spinner
+            android:id="@+id/matiere"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <LinearLayout
             android:layout_width="match_parent"
