--- a/app/src/main/res/layout/connexion_activity.xml
+++ b/app/src/main/res/layout/connexion_activity.xml
@@ -8,29 +8,19 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="15sp"
-        android:visibility="gone">
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:visibility="visible">
 
-        <EditText
-            android:id="@+id/email"
+        <TextView
+            android:id="@+id/co"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Email"
-            android:inputType="text|textEmailAddress" />
-
-        <EditText
-            android:id="@+id/password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Password"
-            android:inputType="textPassword" />
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Valider" />
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="Félicitation, vous êtes connecté !"
+            android:visibility="gone" />
 
     </LinearLayout>
 
@@ -46,15 +36,6 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="30dp"
             android:layout_marginTop="30dp" />
-
-        <TextView
-            android:id="@+id/co"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:text="Félicitation, vous êtes connecté !"
-            android:visibility="gone" />
 
         <Button
             android:id="@+id/buttondeco"
